# shop-app-backend

./: .gitignore  pyproject.toml
apps/feedbacks/: admin.py  models.py  serializers.py  urls.py  views.py
apps/feedbacks/migrations/: 0001_initial.py
apps/products/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py  0002_alter_product_slug.py
root/: settings.py  urls.py
